# MList

./: .gitignore  LICENSE.md  README.md  cabal.sandbox.config  mlist.cabal  monadic-structures.cabal
Control/Monad/Data/: Class.hs  Foldable.hs  List.hs  Types.hs
Control/Monad/Data/List/: Internal.hs  Unsafe.hs
Data/: MList.hs
